#537 Fix Spacing for News/ Activity
git-svn-id: https://mycognitive.unfuddle.com/svn/mycognitive_arts/trunk@583 2260b2a0-9455-4d21-9559-270ed330a898

--- a/sites/all/themes/saw/style.css
+++ b/sites/all/themes/saw/style.css
@@ -1307,8 +1307,14 @@ div.admin-panel .body {
   table.views-table tr {
     background: none;
     border: 0;
+		border-bottom: 1px solid #dde;
   }
   
+  table.views-table tr:hover {
+    background: #ffb;
+		border-bottom: 1px solid #ffa;
+  }
+	
   .views-exposed-form .form-text {
     max-width: 120px;
     margin-right: 15px;
@@ -4176,7 +4182,6 @@ ul#chatroom-user-list {
 }
 
 #content-profile-display-education {
-	
 }
 
 #content-profile-display-education .field-field-type-of-education {
@@ -4237,4 +4242,25 @@ div.fieldgroup .content {
 
 #forum div.indent {
 	margin-left: 0px !important;
+}
+
+.view-display-id-global_activity {
+	margin-bottom: 20px;
+}
+
+.view-id-recent_activity table {
+	width: 100%;
+}
+
+.view-recent-activity th.views-field-name {
+	width: auto !important;
+	min-width: 150px;
+}
+
+.view-recent-activity th.views-field-created {
+	width: 150px !important;
+}
+
+.node-unpublished {
+    background-color: transparent;
 }
